--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,26 @@
-fastapi
-uvicorn[standard]
-websockets
-python-dotenv
-google-generativeai
-google-cloud-speech
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+websockets==12.0
+python-dotenv==1.0.0
+google-generativeai==0.8.3
+google-cloud-speech==2.26.1
+
+# Database and ORM
+sqlalchemy==2.0.23
+alembic==1.13.1
+psycopg2-binary==2.9.9
+
+# Authentication and Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+
+# Content Management and Validation
+pydantic==2.5.0
+pydantic-settings==2.1.0
+python-slugify==8.0.1
+
+# Development and Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
